compare changes added